manifests/applications/matomo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo
  namespace: matomo
  labels:
    app.kubernetes.io/name: matomo
    app.kubernetes.io/part-of: company-services
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: matomo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: matomo
        app.kubernetes.io/part-of: company-services
    spec:
      securityContext:
        fsGroup: 33
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: matomo
          image: matomo:5.13.0-apache@sha256:b4d6020b383d67170c3711035de534aa8ae3921aea0149ba3f9d54aca7c707c5 # {"$imagepolicy": "flux-system:matomo"}
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/www/html
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /matomo.php
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /matomo.php
              port: http
            initialDelaySeconds: 120
            periodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: matomo-data
